// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RestaurantList /> renders correctly while empty 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
>
  <View
    style={
      Array [
        Object {
          "borderBottomColor": "black",
          "borderBottomWidth": 0.5,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "fontSize": 24,
            "marginBottom": 12,
            "marginLeft": 12,
            "marginRight": 12,
            "marginTop": 12,
          },
        ]
      }
    >
      Restaurants
    </Text>
  </View>
  <RCTScrollView
    ItemSeparatorComponent={[Function]}
    data={Array []}
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onRefresh={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        refreshing={false}
      />
    }
    refreshing={false}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <RCTRefreshControl />
    <View />
  </RCTScrollView>
</RCTSafeAreaView>
`;

exports[`<RestaurantList /> renders correctly whith data 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
>
  <View
    style={
      Array [
        Object {
          "borderBottomColor": "black",
          "borderBottomWidth": 0.5,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "fontSize": 24,
            "marginBottom": 12,
            "marginLeft": 12,
            "marginRight": 12,
            "marginTop": 12,
          },
        ]
      }
    >
      Restaurants
    </Text>
  </View>
  <RCTScrollView
    ItemSeparatorComponent={[Function]}
    data={
      Array [
        Object {
          "description": "This is the restaurant description",
          "id": "1",
          "image_url": "https://picsum.photos/84/84",
          "title": "McDonalds",
        },
        Object {
          "description": "This is the restaurant description 2",
          "id": "2",
          "image_url": "https://picsum.photos/84/84",
          "title": "McDonalds 2",
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onRefresh={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        refreshing={false}
      />
    }
    refreshing={false}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <RCTRefreshControl />
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "marginBottom": 18,
                  "marginLeft": 8,
                  "marginRight": 8,
                  "marginTop": 18,
                },
              ]
            }
          >
            <Image
              source={
                Object {
                  "uri": "https://picsum.photos/50/50",
                }
              }
              style={
                Array [
                  Object {
                    "borderRadius": 6,
                    "height": 84,
                    "width": 84,
                  },
                ]
              }
            />
            <View
              style={
                Array [
                  Object {
                    "display": "flex",
                    "flexBasis": 0,
                    "flexGrow": 2,
                    "flexShrink": 1,
                    "marginLeft": 12,
                  },
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "display": "flex",
                      "flexDirection": "row",
                    },
                  ]
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "fontSize": 24,
                        "justifyContent": "center",
                      },
                    ]
                  }
                >
                  McDonalds
                </Text>
                <Text
                  style={
                    Array [
                      Object {
                        "flexBasis": 0,
                        "flexGrow": 1,
                        "flexShrink": 1,
                        "textAlign": "right",
                      },
                    ]
                  }
                />
              </View>
              <Text
                style={
                  Array [
                    Object {
                      "color": "gray",
                      "fontSize": 12,
                      "justifyContent": "center",
                    },
                  ]
                }
              >
                This is the restaurant description
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "display": "flex",
                "marginBottom": 0,
                "marginLeft": 12,
                "marginRight": 12,
                "marginTop": 0,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "rgba(0, 0, 0, 0.2)",
                  "height": 1,
                  "width": "100%",
                },
              ]
            }
          />
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "marginBottom": 18,
                  "marginLeft": 8,
                  "marginRight": 8,
                  "marginTop": 18,
                },
              ]
            }
          >
            <Image
              source={
                Object {
                  "uri": "https://picsum.photos/50/50",
                }
              }
              style={
                Array [
                  Object {
                    "borderRadius": 6,
                    "height": 84,
                    "width": 84,
                  },
                ]
              }
            />
            <View
              style={
                Array [
                  Object {
                    "display": "flex",
                    "flexBasis": 0,
                    "flexGrow": 2,
                    "flexShrink": 1,
                    "marginLeft": 12,
                  },
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "display": "flex",
                      "flexDirection": "row",
                    },
                  ]
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "fontSize": 24,
                        "justifyContent": "center",
                      },
                    ]
                  }
                >
                  McDonalds 2
                </Text>
                <Text
                  style={
                    Array [
                      Object {
                        "flexBasis": 0,
                        "flexGrow": 1,
                        "flexShrink": 1,
                        "textAlign": "right",
                      },
                    ]
                  }
                />
              </View>
              <Text
                style={
                  Array [
                    Object {
                      "color": "gray",
                      "fontSize": 12,
                      "justifyContent": "center",
                    },
                  ]
                }
              >
                This is the restaurant description 2
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</RCTSafeAreaView>
`;
